src/test/ui/consts/min_const_fn/loop_ice.stderr
error: loops are not allowed in const fn
  --> $DIR/loop_ice.rs:2:5
   |
LL |     loop {} //~ ERROR loops are not allowed in const fn
   |     ^^^^^^^

error: aborting due to previous error

